[project]
name = "librematch_steam_auth"
version = "0.2.0"
description = "Steam authentication proxy for use with Relic Link API "
author = "LibreMatch Team <info@librematch.org>"
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp~=3.9.0",
    "asyncio-gevent~=0.2.0",
    "gevent==23.9.0",
    "protobuf~=3.19.5",
    "python-dotenv~=0.19.2",
    "requests~=2.31.0",
    "steam[client]==1.2.0",
]

[project.scripts]
psp = "poc_steam_proxy:main"

[tool.uv.sources]
poc_steam_proxy = { workspace = true }

[tool.uv.workspace]
members = ["poc_steam_proxy"]

[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["bandit>=1.8.2", "black>=25.1.0", "flake8>=7.1.1"]

[tool.hatch.build.targets.wheel]
packages = ["poc_steam_proxy"]
